--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -263,7 +263,7 @@
     <Compile Include="UI\Components\Menu\MenuPublisher.cs" />
     <Compile Include="UI\HtmlAttribute.cs" />
     <Compile Include="UI\HtmlAttributeExtensions.cs" />
-    <Compile Include="Controllers\LanguageSeoCodeAttribute.cs" />
+    <Compile Include="Localization\LanguageSeoCodeAttribute.cs" />
     <Compile Include="Localization\IText.cs" />
     <Compile Include="Localization\LocalizedUrlHelper.cs" />
     <Compile Include="Localization\Text.cs" />
