Moved all MVC filters from SmartStore.Web.Framework.Controllers to SmartStore.Web.Filters

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -219,29 +219,29 @@
     <Compile Include="Controllers\AdminControllerBase.cs" />
     <Compile Include="Localization\SetWorkingCultureAttribute.cs" />
     <Compile Include="Theming\AdminThemedAttribute.cs" />
-    <Compile Include="Controllers\HandleExceptionFilter.cs" />
-    <Compile Include="Controllers\NotifyAttribute.cs" />
+    <Compile Include="Filters\HandleExceptionFilter.cs" />
+    <Compile Include="Filters\NotifyAttribute.cs" />
     <Compile Include="Controllers\PublicControllerBase.cs" />
     <Compile Include="Controllers\PluginControllerBase.cs" />
-    <Compile Include="Controllers\CheckAffiliateAttribute.cs" />
+    <Compile Include="Filters\CheckAffiliateAttribute.cs" />
     <Compile Include="Controllers\ContollerExtensions.cs" />
-    <Compile Include="Controllers\CustomerLastActivityAttribute.cs" />
-    <Compile Include="Controllers\ParameterBasedOnFormNameAndValueAttribute.cs" />
-    <Compile Include="Controllers\ParameterBasedOnFormNameAttribute.cs" />
+    <Compile Include="Filters\CustomerLastActivityAttribute.cs" />
+    <Compile Include="Filters\ParameterBasedOnFormNameAndValueAttribute.cs" />
+    <Compile Include="Filters\ParameterBasedOnFormNameAttribute.cs" />
     <Compile Include="Controllers\SmartController.cs" />
-    <Compile Include="Controllers\StoreIpAddressAttribute.cs" />
-    <Compile Include="Controllers\UnitOfWorkAttribute.cs" />
+    <Compile Include="Filters\StoreIpAddressAttribute.cs" />
+    <Compile Include="Filters\UnitOfWorkAttribute.cs" />
     <Compile Include="Events\TabStripCreated.cs" />
     <Compile Include="Extensions\HtmlSelectListExtensions.cs" />
     <Compile Include="Extensions\HttpExtensions.cs" />
     <Compile Include="Extensions\HttpSessionStateExtensions.cs" />
     <Compile Include="Extensions\NameValueCollectionExtensions.cs" />
-    <Compile Include="Controllers\HandleInstallFilter.cs" />
+    <Compile Include="Filters\HandleInstallFilter.cs" />
     <Compile Include="Extensions\PostedFileResult.cs" />
     <Compile Include="Extensions\RouteExtensions.cs" />
     <Compile Include="Extensions\TelerikExtensions.cs" />
     <Compile Include="Mvc\ErrorMessageProvider.cs" />
-    <Compile Include="Mvc\CompressAttribute.cs" />
+    <Compile Include="Filters\CompressAttribute.cs" />
     <Compile Include="Mvc\ModelBoundEvent.cs" />
     <Compile Include="Mvc\ProviderModel.cs" />
     <Compile Include="Pdf\Content\PdfRouteContent.cs" />
@@ -273,7 +273,7 @@
     <Compile Include="Bundling\IBundlePublisher.cs" />
     <Compile Include="Mvc\CommaSeparatedModelBinder.cs" />
     <Compile Include="Plugins\PluginDebugViewVirtualPathProvider.cs" />
-    <Compile Include="Controllers\PublicStoreAllowNavigationAttribute.cs" />
+    <Compile Include="Filters\PublicStoreAllowNavigationAttribute.cs" />
     <Compile Include="Routing\GuidConstraint.cs" />
     <Compile Include="Seo\GenericPathRoute.cs" />
     <Compile Include="Seo\GenericPathRouteExtensions.cs" />
@@ -301,15 +301,15 @@
     <Compile Include="UI\ScaffoldExtensions.cs" />
     <Compile Include="Security\AdminValidateIpAddressAttribute.cs" />
     <Compile Include="Security\FilePermissionHelper.cs" />
-    <Compile Include="Controllers\StoreClosedAttribute.cs" />
-    <Compile Include="Controllers\StoreLastVisitedPageAttribute.cs" />
+    <Compile Include="Filters\StoreClosedAttribute.cs" />
+    <Compile Include="Filters\StoreLastVisitedPageAttribute.cs" />
     <Compile Include="Controllers\PaymentControllerBase.cs" />
-    <Compile Include="Controllers\FormValueRequiredAttribute.cs" />
+    <Compile Include="Filters\FormValueRequiredAttribute.cs" />
     <Compile Include="Localization\LocalizedRoute.cs" />
     <Compile Include="Localization\LocalizedRouteExtensions.cs" />
     <Compile Include="Mvc\ModelBase.cs" />
     <Compile Include="Security\AdminAuthorizeAttribute.cs" />
-    <Compile Include="Controllers\FormValueExistsAttribute.cs" />
+    <Compile Include="Filters\FormValueExistsAttribute.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Mvc\XmlDownloadResult.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
