--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -311,7 +311,7 @@
     <Compile Include="Security\AdminAuthorizeAttribute.cs" />
     <Compile Include="Filters\FormValueExistsAttribute.cs" />
     <Compile Include="DependencyRegistrar.cs" />
-    <Compile Include="Modelling\XmlDownloadResult.cs" />
+    <Compile Include="Modelling\Results\XmlDownloadResult.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\HtmlExtensions.cs" />
     <Compile Include="Modelling\PictureResult.cs" />
@@ -323,14 +323,14 @@
     <Compile Include="Routing\IRoutePublisher.cs" />
     <Compile Include="Mvc\SmartDependencyResolver.cs" />
     <Compile Include="Routing\RoutePublisher.cs" />
-    <Compile Include="Mvc\SmartMetadataProvider.cs" />
+    <Compile Include="Modelling\SmartMetadataProvider.cs" />
     <Compile Include="Modelling\SmartModelBinder.cs" />
     <Compile Include="Localization\SmartResourceDisplayName.cs" />
     <Compile Include="UI\WidgetZoneModel.cs" />
     <Compile Include="Validators\SmartBaseValidator.cs" />
     <Compile Include="Validators\SmartValidatorFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Modelling\RssActionResult.cs" />
+    <Compile Include="Modelling\Results\RssActionResult.cs" />
     <Compile Include="Security\SslRequirement.cs" />
     <Compile Include="Security\RequireHttpsByConfigAttribute.cs" />
     <Compile Include="Localization\TelerikLocalizationService.cs" />
