Some fixes for the latest refactoring commits

--- a/src/Plugins/SmartStore.DiscountRules/SmartStore.DiscountRules.csproj
+++ b/src/Plugins/SmartStore.DiscountRules/SmartStore.DiscountRules.csproj
@@ -42,6 +42,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -192,6 +193,7 @@
     </Content>
     <Content Include="Views\Web.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\DiscountRules\BillingCountry.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
