--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -127,6 +127,7 @@
       <siteMapNode id="activity-types" iconClass="eye" title="Activity Types" resKey="Admin.Configuration.ActivityLog.ActivityLogType" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListTypes" area="Admin" />
       <siteMapNode id="acl" iconClass="lock" title="Access control list" resKey="Admin.Configuration.ACL" permissionNames="ManageACL" controller="Security" action="Permissions" area="Admin" />
 
+      <siteMapNode id="import" iconClass="arrow-circle-o-up " title="Import" resKey="Common.Import" permissionNames="ManageImports" controller="Import" action="List" area="Admin" />
       <siteMapNode id="export" iconClass="arrow-circle-o-down " title="Export" resKey="Common.Export" permissionNames="ManageExports" controller="Export" action="List" area="Admin" />
 
       <siteMapNode id="payment-methods-sep-1" isGroupHeader="true" title="[SKIP]" />
