--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="Caching\EfCacheImpl.cs" />
     <Compile Include="Caching\EfCachingPolicy.cs" />
+    <Compile Include="Mapping\DataExchange\ImportProfileMap.cs" />
     <Compile Include="Mapping\DataExchange\SyncMappingMap.cs" />
     <Compile Include="Mapping\DataExchange\ExportDeploymentMap.cs" />
     <Compile Include="Mapping\Directory\QuantityUnitMap.cs" />
@@ -370,6 +371,10 @@
     <Compile Include="Migrations\201511271019577_ExportFramework3.cs" />
     <Compile Include="Migrations\201511271019577_ExportFramework3.Designer.cs">
       <DependentUpon>201511271019577_ExportFramework3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512091408315_ImportFramework.cs" />
+    <Compile Include="Migrations\201512091408315_ImportFramework.Designer.cs">
+      <DependentUpon>201512091408315_ImportFramework.cs</DependentUpon>
     </Compile>
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -693,6 +698,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511271019577_ExportFramework3.resx">
       <DependentUpon>201511271019577_ExportFramework3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512091408315_ImportFramework.resx">
+      <DependentUpon>201512091408315_ImportFramework.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
