--- a/.gitignore
+++ b/.gitignore
@@ -201,6 +201,7 @@ Kopie von*
 /src/Presentation/SmartStore.Web/Plugins
 /src/Presentation/SmartStore.Web/App_Data/_temp/
 /src/Presentation/SmartStore.Web/App_Data/ExportProfiles/
+/src/Presentation/SmartStore.Web/App_Data/ImportProfiles/
 /src/Presentation/SmartStore.Web/App_Data/Settings.txt
 /src/Presentation/SmartStore.Web/App_Data/InstalledPlugins.txt
 /src/Presentation/SmartStore.Web/App_Data/Licenses.lic
