Editing an import profile

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -539,6 +539,8 @@
     <Content Include="Views\Import\List.cshtml" />
     <Content Include="Views\Import\Create.cshtml" />
     <Content Include="Views\Import\_CreateOrUpdate.cshtml" />
+    <Content Include="Views\Import\Edit.cshtml" />
+    <Content Include="Views\Import\_ImportFileList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin.less" />
