--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Domain\Catalog\PriceDisplayType.cs" />
     <Compile Include="Domain\Customers\CustomerNumberVisibility.cs" />
     <Compile Include="Domain\Customers\CustomerNumberMethod.cs" />
+    <Compile Include="Domain\DataExchange\DataExchangeEnums.cs" />
     <Compile Include="Domain\DataExchange\ImportEnums.cs" />
     <Compile Include="Domain\DataExchange\ImportProfile.cs" />
     <Compile Include="Domain\DataExchange\SyncMapping.cs" />
