Updated web.config. Mime type mapping for woff2 required.

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -170,6 +170,7 @@
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/octet-stream" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff2" />
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".less" mimeType="text/css" />
