A new mime type entry in web.config should be removed first

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -164,13 +164,14 @@
       <remove fileExtension=".svg" />
       <remove fileExtension=".eot" />
       <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
       <remove fileExtension=".otf" />
       <remove fileExtension=".json" />
       <remove fileExtension=".less" />
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/octet-stream" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
-      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".less" mimeType="text/css" />
