--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -376,6 +376,7 @@
     <Compile Include="Migrations\201512151526290_ImportFramework.Designer.cs">
       <DependentUpon>201512151526290_ImportFramework.cs</DependentUpon>
     </Compile>
+    <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
