Further implementation of the entity picker

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1859,6 +1859,7 @@
     <Content Include="Views\Shared\LicenseRequired.cshtml" />
     <Content Include="Themes\Web.config" />
     <Content Include="Views\Common\EntityPicker.cshtml" />
+    <Content Include="Views\Common\EntityPickerList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\select2\" />
