Changed some icons

--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -127,8 +127,9 @@
       <siteMapNode id="activity-types" iconClass="eye" title="Activity Types" resKey="Admin.Configuration.ActivityLog.ActivityLogType" permissionNames="ManageActivityLog" controller="ActivityLog" action="ListTypes" area="Admin" />
       <siteMapNode id="acl" iconClass="lock" title="Access control list" resKey="Admin.Configuration.ACL" permissionNames="ManageACL" controller="Security" action="Permissions" area="Admin" />
 
-      <siteMapNode id="import" iconClass="arrow-circle-o-up " title="Import" resKey="Common.Import" permissionNames="ManageImports" controller="Import" action="List" area="Admin" />
-      <siteMapNode id="export" iconClass="arrow-circle-o-down " title="Export" resKey="Common.Export" permissionNames="ManageExports" controller="Export" action="List" area="Admin" />
+      <siteMapNode id="data-sep-1" isGroupHeader="true" title="[SKIP]" />
+      <siteMapNode id="import" iconClass="download " title="Import" resKey="Common.Import" permissionNames="ManageImports" controller="Import" action="List" area="Admin" />
+      <siteMapNode id="export" iconClass="upload " title="Export" resKey="Common.Export" permissionNames="ManageExports" controller="Export" action="List" area="Admin" />
 
       <siteMapNode id="payment-methods-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="themes" iconClass="picture-o" title="Themes" resKey="Admin.Configuration.Themes" permissionNames="ManageThemes" controller="Theme" action="List" area="Admin"/>
