Resolves #851 Replace reCAPTCHA with "I'm not a robot" CAPTCHA

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -83,6 +83,8 @@
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
     <add key="sm:TaskSchedulerSweepInterval" value="1" />
+    <add key="g:RecaptchaWidgetUrl" value="https://www.google.com/recaptcha/api.js" />
+    <add key="g:RecaptchaVerifyUrl" value="https://www.google.com/recaptcha/api/siteverify" />
     <!-- uncomment and set this to your store's task scheduler base url when the automatic url resolution fails (e.g. 'http://www.mystore.com/taskscheduler') -->
     <!--
     <add key="sm:TaskSchedulerBaseUrl" value="" />
