(Dev) Resolves #792 ViewEngine: Enable vbhtml views per configuration

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -75,6 +75,7 @@
     <add key="sm:AreaBasePaths" value="~/Plugins/" />
     <!-- set this to "true", if the view engine should also try to resolve view files ending with {CurrentLanguage} (e.g.: MyView.de.cshtml > MyView.cshtml)  -->
     <add key="sm:EnableLocalizedViews" value="false" />
+    <add key="sm:EnableVbViews" value="false" />
     <add key="sm:ShowCustomErrors" value="true" />
     <add key="sm:EnableLegacyRoutesMapping" value="true" />
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
