--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -94,6 +94,7 @@
         <siteMapNode id="blog-settings" title="Blog settings" resKey="Admin.Configuration.Settings.Blog" controller="Setting" action="Blog" area="Admin" />
         <siteMapNode id="news-settings" title="News settings" resKey="Admin.Configuration.Settings.News" controller="Setting" action="News" area="Admin" />
         <siteMapNode id="forum-settings" title="Forums settings" resKey="Admin.Configuration.Settings.Forums" controller="Setting" action="Forum" area="Admin" />
+        <siteMapNode id="dataexchange-settings" title="Data exchange settings" resKey="Admin.Common.DataExchange" controller="Setting" action="DataExchange" area="Admin" />
 
         <siteMapNode id="configuration-sep-1" isGroupHeader="true" title="[SKIP]" />
         <siteMapNode id="all-settings" title="All settings (settings)" resKey="Admin.Configuration.Settings.AllSettings" controller="Setting" action="AllSettings" area="Admin" />
