Category import: Download pictures by URL

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -189,6 +189,7 @@
     <Compile Include="DataExchange\Events\RowExportingEvent.cs" />
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
     <Compile Include="DataExchange\Import\DataImporter.cs" />
+    <Compile Include="DataExchange\Import\EntityImporterBase.cs" />
     <Compile Include="DataExchange\Import\IEntityImporter.cs" />
     <Compile Include="DataExchange\Import\ImportExecuteContext.cs" />
     <Compile Include="DataExchange\Import\Internal\DataImporterContext.cs" />
