(Dev) New event method TabStripCreated.AddWidget(): enables plugin developers to render child actions into a dynamically created special tab called 'Plugins'. This prevents 'tab wasting' for smaller plugin views.

--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1849,6 +1849,7 @@
     <Content Include="Themes\Web.config" />
     <Content Include="Views\Common\EntityPicker.cshtml" />
     <Content Include="Views\Common\EntityPickerList.cshtml" />
+    <Content Include="Views\Widget\TabWidgets.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\select2\" />
